--- a/JavaAndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/JavaAndroidApp/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/offwhite"
     tools:context=".MainActivity">
 
     <Button
-        android:text="SWITCH"
-        android:layout_width="100sp"
-        android:layout_height="60sp"
-        android:layout_centerHorizontal="true"
+        android:id="@+id/buttonStart"
+        android:layout_width="156dp"
+        android:layout_height="61dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40sp"
-        android:id="@+id/buttonSwitch"
-        android:scaleType="centerCrop"/>
-
-    <ImageView
-        android:layout_width="300sp"
-        android:layout_height="300sp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:id="@+id/imageview"/>
+        android:layout_marginBottom="137dp"
+        android:background="@drawable/circular_button"
+        android:fontFamily="@font/bangers_regular"
+        android:scaleType="centerCrop"
+        android:text="Scanează"
+        android:textAlignment="center"
+        android:textColor="@color/offwhite"
+        android:textSize="25sp" />
+
+    <Button
+        android:id="@+id/buttonHelp"
+        android:layout_width="156dp"
+        android:layout_height="61dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/circular_button"
+        android:fontFamily="@font/bangers_regular"
+        android:scaleType="centerCrop"
+        android:text="Ajutor"
+        android:textAlignment="center"
+        android:textColor="@color/offwhite"
+        android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="286dp"
-        android:layout_height="88dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="66dp"
-        android:layout_marginTop="101dp"
-        android:width="100sp"
-        android:height="50sp"
-        android:text="aaaaa"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:id="@+id/mainpage_titlu"
+        android:layout_width="350sp"
+        android:layout_height="wrap_content"
+        android:text="Aplicație de rezolvare a unui cub Rubik 3D"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:layout_marginTop="70sp"
+        android:layout_marginLeft="15sp"
+        android:layout_marginRight="15sp"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/bangers_regular"
+        android:textColor="@color/darkblue"/>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="249dp"
+        android:layout_height="242dp"
+        android:layout_centerInParent="true"
+        android:background="@color/offwhite"
+        app:srcCompat="@drawable/ps2" />
+
 </RelativeLayout>
