--- a/JavaAndroidApp/app/src/main/res/values/colors.xml
+++ b/JavaAndroidApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="offwhite">#edf2f4</color>
+    <color name="darkblue">#2b2d42</color>
+    <color name="blue">#172896</color>
+    <color name="red">#a11010</color>
+    <color name="orange">#c96d16</color>
+    <color name="yellow">#e0d210</color>
+    <color name="green">#217a09</color>
+    <color name="gray">#b5b3b3</color>
 </resources>
