--- a/JavaAndroidApp/app/src/main/res/layout/activity_build_cube.xml
+++ b/JavaAndroidApp/app/src/main/res/layout/activity_build_cube.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".build_cube">
+    tools:context=".build_cube"
+    android:background="@color/offwhite">
 
     <ImageButton
         android:id="@+id/top_right_tile_placeholder53"
@@ -633,7 +634,7 @@
         android:id="@+id/top_right_tile_placeholder0"
         android:layout_width="20sp"
         android:layout_height="20sp"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="136dp"
         android:layout_marginTop="128dp"
         android:background="@drawable/tile_gray"
         android:scaleType="centerCrop"
